# GS

./: CMakeLists.txt  desktop.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  resources.qrc  sat_config.h
